1.5.3
  Added: New Scraper "TotallyCoolPix.com"
  Changed: How using 'keep' as default aspect-ratio (press 0 or set in settings to change)
  Fixed: html codes in title from some "Atlantic in focus" albums
  Changed: The spinning loading animation logic

1.5.2
  Fixed import error

1.5.1
  New plugin-way for scrapers
  Fixed: Wallstreetjournal Scraper
  Fixed: Sacramento Bee Scraper
  Fixed: Visible-conditions in Eden
  Fixed: Back-key in Eden
  Code Improvements

1.5.0
  Added: New Scraper: 'The Atlantic: In Focus'
  Removed: Scraper 'Boston.com: The Big Shot' - outdated
  Added: Function and Setting for changing the aspect-ratio of the Pictures
  Improved: Caching of HTML-Pages (much faster now)
  Improved: Rewrote the multi-scraper-logic
  Fixed: The Big Pictures Facebook-comment-change Announcement broke scraper
  Fixed: The Big Pictures remove Hash at the end of the Description
  Changed: The usage help is now replaced by a settings "help"-section
  Cosmetic: more pep8 conformity
  
1.4.2
  Fixed: Error with external Python and os.makedirs(cachedir) with cachedir = "special://..."
  Fixed TheSacramentoBee wasn't able to get Photos
  Fixed WallStreetJournal wasn't able to get Photos

1.4.1
  Fixed: boston.com now needs a referer for the photosets
  Improved: Better class Inheritance
  Cosmetic: pep8 (except line length)
  Improved: The german, english and french usage instructions (and shorten them)
  Fixed: The Help now appears only on the first album or photoset

1.4.0
  Changed: Skin has a new Look - thanks to Jezz_X
  Changed: Skin is now animated
  Changed: Dedicated Usage-Help-Box (hides if any key is pressed)
  Added: French Translation
  Changed: Split Sourcename, Albumtitle and Picturetitle for different use in 3rd party Skins
  Improved: The toggle "showInfo" stays now in its last state
  Improved: Respect pep8 styleguide (except line length...)
  Improved: Skin XML-File is now clean

1.3.2
  Changed: Don't use 'os.getcwd()'